<resources>
    <string name="app_name">Skin It</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_string">Home</string>
    <string name="upload_images_string">Upload Images</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categoriesstring">Categories</string>
    <string name="recent_uploads_string">Recent Uploads</string>
    <string name="randomimgs">Random Images</string>
    <string name="downloaded_image_tab">Downloaded</string>
    <string name="loadingstring">Loading</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="note">Note:The images can\'t be directly uploaded but will be sent to the admin and then will be uploaded if approved.</string>
    <string name="select_images">Select Images</string>
    <string name="upload_images">Upload Images</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
